--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- General options --- #
 
 # Name of website
-title: Home Page
+title: Home
 
 # Short description of your site
 description: "Ekram's Blog"
