--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,7 @@ navbar-links:
   Resources:
     - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     - Learn markdown: "http://www.markdowntutorial.com/"
-    - "Let's connect": "contactinfo"
-    
- 
+    - "Let's connect!": "contactinfo"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
